<resources>
    <string name="app_name">Npower QA </string>
    <string name="title_activity_main2">Npower</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_home">Npower Past Question and Answer</string>
    <string name="about">What we do, About Us</string>
    <string name="content1">
    Skills and knowledge are the driving forces of economic growth and social development.
        Despite the current high level of unemployment, harnessing Nigeria’s young demography
        through appropriate skill development efforts provides an opportunity to achieve inclusion
        and productivity within the country. Large-scale skill development is the main policy thrust
        of the N-Power Programme
    </string>
    <string name="content2">
        N-Power is also linked to the Federal Government’s policies in the economic,
        employment and social development arenas. N-Power addresses the challenge of
        youth unemployment by providing a structure for large scale and relevant work
        skills acquisition and development while linking its core and outcomes to fixing
        inadequate public services and stimulating the larger economy. The modular programmes
        under N-Power will ensure that each participant will learn and practice most of what is
        necessary to find or create work. The N-Power Volunteer Corp involves a massive deployment
        of 500,000 trained graduates who will assist to improve the inadequacies in our public services
        in education, health and civic education. Some of these graduates will also help in actualising
        Nigeria’s economic and strategic aspirations of achieving food security and self-sufficiency.
    </string>
    <string name="content3">
        N-Power will also be a platform for diversifying the economy.
        N-Power is preparing young Nigerians for a knowledge economy where,
        equipped with world-class skills and certification, they become innovators
        and movers in the domestic and global markets. Nigeria will have a pool of software developers,
        hardware service professionals, animators, graphic artists, building services professionals,
        artisans and others. N-Power also focuses on providing our non-graduates with relevant
        technical and business skills that enhance their work outlook and livelihood.

    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav1_about">About</string>
    <string name="about_us">About Us</string>
    <string name="what_we_do">What We Do</string>
    <string name="programmes">Programmes</string>
    <string name="readmore">Read More>>></string>
    <string name="build">N-Power Build, What you Need to know</string>
    <string name="programme">N-Power Programmes, What you Need to know</string>
    <string name="programme1">The Programmes include:
             \n→ N-power Agro
             \n→ N-Power Tax
             \n→ N-Power Build
             \n→ N-Power Creative
             \n→ Npower Health
             \n→ N-Power Teach
             \n→ Npower Tech Software
             \n→ Npower Tech Hardware</string>
    <string name="build1">N-Power Build is an accelerated training and certification (Skills to Job)
        programme that will engage and train 75,000 young unemployed Nigerians in order to build a new
        crop of skilled and highly competent workforce of technicians, artisans and service professionals.
            \nThe focus industries include:
             \n→ Building Services
             \n→ Construction
             \n→ Built Environment Services
             \n→ Utilities
             \n→ Automotive
             \n→ Aluminium and Gas</string>
    <string name="creative1">N-Power Creative, What you Need to know</string>
    <string name="creative2">The N-Power Creative programme will train and develop 5,000 young creative talents.
        The strategy is to put our creative industry on the global radar as exporters of worldclass services and content.
        Training will last 3 months, made up of 1-month in-class and a 2-month hands-on group project,
        across selected Nigerian cities. The participants will be trained and certified in one of the following courses:
        \nAnimation | Graphic Design | Post-production | Script Writing\n
        At the end of the training, some participants will get local and international internship
        opportunities while others will be linked to job and market opportunities. In addition,
        all participants will receive computing devices that will ensure that they master their
        skills during and after the training.
</string>
    <string name="contact_us">our Support Centres\nPhone Numbers</string>
    <string name="npower_contact">MTN - 09060000445, 09060000446, 09060000447, 09060000448,
        09060000449, 09060000450, 09060000451, 09060000452, 09060000453, 09060000454</string>
    <string name="npower_Glo"> GLO - 09055555960, 09055555961, 09055555962, 09055555963, 09055555964, 09055555965.</string>
    <string name="npower_etisalat"> ETISALAT - 09099998401, 09099998402, 09099998403</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_occurs">"'{string}'occurs{times}"</string>
    <string name="agro">N-Power Agro, What you Need to know</string>
    <string name="agro1">N-Power Agro Volunteers will provide advisory services to farmers across the
                        country. They will disseminate the knowledge that has been aggregated by the
                        Federal Ministry of Agriculture and Rural Development in the area of extension
                        services. They will also gather data of Nigeria’s agriculture assets.</string>
    <string name="tax">N-Power Tax, What you Need to know</string>
    <string name="tax2">The Federal Government seeks to encourage non-compliant and partially compliant
                        taxpayers to come clean and declare and pay their appropriate tax due to the
                        government.A minimum of 3,700 N-Power volunteers will be selected to work as
                        Community Tax Liaison Officers to work in their states of residence with the state\'s
                        tax authorities.

                        The N-Power community tax liaison officers will have the following
                        key responsibilities which will include answering online inquiries, customer
                        management, creating awareness of tax compliance.</string>
    <string name="health">N-Power Health, What you Need to know</string>
    <string name="health1"> N-Power Health Volunteers will help improve and promote preventive healthcare in
                            their communities to vulnerable members of the society including pregnant women
                            and children and to families and individuals.</string>
    <string name="teach">N-Power Teach, What you Need to know</string>
    <string name="teach1">N-Power Teach Volunteers will help improve basic education delivery in Nigeria. NPower
                          Teach Volunteers will be deployed as teacher assistants in primary schools
                          around Nigeria. They will not replace the current teachers, but will work as support
                          teachers across Nigeria, assisting with teaching, school management and other
                          functions within the schools. Where possible, they will also assist in taking basic
                          education to children in marginalised communities.</string>
    <string name="software">N-Power Software, What you Need to know</string>
    <string name="software11">To empower 10,000 Software Developers into the ICT Industry.</string>
    <string name="Instruction">Instruction: Select one option from each of the questions</string>
    <string name="hwelcome">Npower Health questions Part 1</string>
    <string name="hquestion1a">Question One</string>
    <string name="hquestion1"> Look! The clouds are gathering. Yes, I’m afraid it
______ be pouring down soon.</string>
    <string name="hquestion1_option1">A. must</string>
    <string name="hquestion1_option2">B. should</string>
    <string name="hquestion1_option3">C. could </string>
    <string name="hquestion1_option4">D. Might </string>
    <string name="hquestion1_option5">E. can</string>
    <string name="hquestion2a">Question Two</string>
    <string name="hquestion2"> Albert Einstein, Sir Isaac Newton, and Charles
                                  Darwin have something in common</string>
    <string name="hquestion2_option1">A. They were all famous Artists </string>
    <string name="hquestion2_option2">B. None of the options</string>
    <string name="hquestion2_option3">C. They were all famous Poets</string>
    <string name="hquestion2_option4">D. They were all famous Scientists</string>
    <string name="hquestion2_option5">E. They were all famous Historians</string>
    <string name="hquestion3a">Question Three </string>
    <string name="hquestion3"> Research has shown that sugar can contribute
 to all but one of the following illnesses.</string>
    <string name="hquestion3_option1">A. hypertension</string>
    <string name="hquestion3_option2">B. tooth decay</string>
    <string name="hquestion3_option3">C. obesity</string>
    <string name="hquestion3_option4">D. typhoid</string>
    <string name="hquestion3_option5">E. diabetes</string>
    <string name="hquestion4a">Question Four</string>
    <string name="hquestion4">Dayo read 4/5th of a story book which has 500
pages. How many pages of the book is not yet read by Dayo?</string>
    <string name="hquestion4_option1">A. 60</string>
    <string name="hquestion4_option2">B. 100</string>
    <string name="hquestion4_option3">C. 80 </string>
    <string name="hquestion4_option4">D. 60</string>
    <string name="hquestion5a">Question Five</string>
    <string name="hquestion5"> 10 is equal to </string>
    <string name="hquestion5_option1">A.  1</string>
    <string name="hquestion5_option2">B. None of these</string>
    <string name="hquestion5_option3">C. -1</string>
    <string name="hquestion5_option4">D. 0</string>
    <string name="hnext">Next</string>
    <string name="hSubmit">Submit</string>
    <string name="healthpart2Answerb">Answers to Part 2 Health Questions </string>
    <string name="healthpart2Answer1">1.D.not open to students </string>
    <string name="healthpart2Answer2">2.B.  typhoid </string>
    <string name="healthpart2Answer3">3.A.  Prof. Yemi Osinbajo  </string>
    <string name="healthpart2Answer4">4.B.  78  </string>
    <string name="healthpart2Answer5">5.B. 3 1/4 months </string>
    <string name="healthpart2Answer6">6.C. Health educator</string>
    <string name="healthpart2Answer7">7.B. 2 compressions : 30 rescue breaths  </string>
    <string name="healthpart2Answer8">8.A.  A brief loss of consciousness. .</string>
    <string name="healthpart2Answer9">9.B.  Supercial, partial thickness, full thickness</string>
    <string name="healthpart2Answer10">10.As it relates to you</string>
    <string name="healthpart2Answer11">11.As it relates to you </string>
    <string name="healthpart2Answer12">12.As it relates to you </string>
    <string name="healthpart2Answer13">13.As it relates to you </string>
    <string name="healthpart2Answer14">14.As it relates to you </string>
    <string name="healthpart2Answer15">15.As it relates to you</string>
    <string name="healthpart2Answer16">16.A. adjourned</string>
</resources>