<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gconnect.npower.Part2healthAnswerActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

        <TextView
            android:layout_width="match_parent"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answerb"
            android:textSize="24sp"
            android:background="@drawable/buttons"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer1"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer2"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer3"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer4"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer5"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer6"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer7"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer8"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer9"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer10"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer11"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer12"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer13"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"
           />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer14"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer15"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthpart2Answer16"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="60dp"
            android:textColor="#000000"
            android:lineSpacingExtra="1.2sp"/>
        </LinearLayout>
</ScrollView>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize= "SMART_BANNER"
            android:layout_alignParentBottom="true"
            ads:adUnitId= "ca-app-pub-2157637459533575/2354756090">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>
    </RelativeLayout>